--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^1.0.3
   google_fonts: ^2.1.0
+  intl: ^0.17.0
   provider: ^6.0.3
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
