--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.3
   uuid: ^3.0.6
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +31,5 @@ flutter:
     - assets/sample_data/
     - assets/profile_pics/
     - assets/fooderlich_assets/
+
+
